--- a/home.css
+++ b/home.css
@@ -5,9 +5,11 @@
     box-sizing: border-box;
 }
 
-html {
+html, body {
     height: 100%;
+    width: 100%;
     margin: 0;
+    padding: 0;
 }
 
 /* Body and General Layout */
