--- a/home.css
+++ b/home.css
@@ -20,7 +20,7 @@ body {
     background-color: #f0f0f0;
     color: #333;
     line-height: 1.6;
-    height: autos;
+    height: auto;
 }
 
 /* Header Styles */
