--- a/home.css
+++ b/home.css
@@ -25,6 +25,7 @@ html, body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: sticky;
 }
 
 .navbar ul {
